--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 <h1>Primeiro commit da aula descomplica git</h1>
+<img src="images\golden-retriever-royalty-free-image-506756303-1560962726.jpg" />
 </body>
 </html>
